# image-processing-app

./: pyproject.toml
imageprocessing/: urls.py  views.py
imageprocessing/templates/: upload_image.html
website/: settings.py  urls.py
