[tool.poetry]
name = "cis-4517-project"
version = "0.1.0"
description = ""
authors = ["Eric Nguyen <etndevel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
boto3 = "^1.28.71"
pillow = "^10.1.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
